issue3 Fix spacing between BUSINESS and the other elements v2

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -101,7 +101,7 @@ body {
       @include Roboto-Bold;
       font-size: 18px;
       line-height: 30px;
-      margin-left: $base-unit * 6;
+      margin: 0 $base-unit * 6;
       position: relative;
 
       &.more-menu {
@@ -114,6 +114,10 @@ body {
         &.isOpenSubmenu {
           color: $white;
         }
+      }
+
+      &:nth-child(5) {
+        margin-right: 0;
       }
 
       &::before {
